--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
   roscpp
   std_msgs
+  cs_connection
 )
 
 ## System dependencies are found with CMake's conventions
@@ -48,10 +49,10 @@ find_package(realsense2)
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-add_message_files(
-  FILES   
-  RsDataMsg.msg
-)
+#add_message_files(
+  #FILES   
+  #RsDataMsg.msg
+#)
 
 ## Generate services in the 'srv' folder
 ##add_service_files(
@@ -67,10 +68,10 @@ add_message_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(   
-  DEPENDENCIES
-  std_msgs
-)
+#generate_messages(   
+#  DEPENDENCIES
+#  std_msgs
+#)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -103,7 +104,7 @@ generate_messages(
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES control_station
+  LIBRARIES control_station
    CATKIN_DEPENDS roscpp std_msgs
 #  DEPENDS system_lib
 )
